add thing service with DvModbusIR support
